--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <meta name="robots" content="index, follow">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
+        <link rel="icon" href="assets/img/svg/GL-logo.svg">
     <link rel="stylesheet" href="assets/css/stylemin.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <title>Вебстудія Глянець</title>
+    <title>Веб-студія Глянець</title>
 </head>
 
 <body>
