--- a/index.html
+++ b/index.html
@@ -3,19 +3,22 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description"
-        content="Вебстудія Глянець - провідна IT-компанія з розробки сайтів. Приєднуйтесь до нашої команди для кар'єрного зростання та розвитку.">
-    <meta name="keywords" content="вебстудія, розробка сайтів, IT-компанія, кар'єра в IT, Глянець, Drupal розробка">
+        content="Вебстудія Глянець — провідна IT-компанія з розробки сайтів. Приєднуйтесь до нашої команди для кар'єрного зростання та розвитку.">
+    <meta name="keywords" content="вебстудія, розробка сайтів, IT-компанія, кар'єра в IT, Глянець, Drupal">
     <meta name="author" content="Вебстудія Глянець">
-    <meta name="robots" content="index, follow">
+    <meta name="robots" content="index,follow">
+
+    <title>Веб-студія Глянець</title>
+
+    <link rel="icon" href="assets/img/svg/GL-logo.svg" type="image/svg+xml">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
-        <link rel="icon" href="assets/img/svg/GL-logo.svg">
-    <link rel="stylesheet" href="assets/css/stylemin.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-    <title>Веб-студія Глянець</title>
+    <link rel="stylesheet" href="assets/css/stylemin.css">
 </head>
 
 <body>
